# coq-plugin-template

./: CHANGES  LICENSE  README.md  coq-my-plugin.opam  dune-project  my-plugin.opam
.github/workflows/: ci.yml  docker-action.yml
src/: CExample.v  ce_api.ml  ce_get.c  ce_syntax.ml4  ce_syntax.mlg  dune
theories/: MyPlugin.v  Test.v  dune
