opam-version: "2.0"
maintainer: "you@example.com"

homepage: "https://github.com/your-github/my-plugin"
dev-repo: "git+https://github.com/your-github/my-plugin.git"
bug-reports: "https://github.com/your-github/my-plugin/issues"
doc: "https://your-github.github.io/my-plugin"
license: "SPDX-identifier-for-your-license"

synopsis: "One line description of your plugin"
description: """
Longer description of what your plugin does that can
cover multiple lines. Including punctuation."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.09.0"}
  "dune" {>= "3.8.2"}
  "coq" {>= "8.17"}
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "keyword:your keyword"
  "logpath:MyPlugin"
]

authors: [
  "Your Name"
  "Another Optional Name"
]
