(coq.theory
 (name MyPlugin)                ; This will determine the toplevel
                                ; module of your theory, modules will
                                ; be MyPlugin.A, etc... when seen from
                                ; outside.

 (package my-plugin)            ; Adding this line will make your
                                ; library installable in the package

 (libraries my-plugin.plugin))  ; Here you should declare the
                                ; dependencies on the ML plugins your
                                ; Coq files depend.

; Other important fields are `modules` and `flags`, see Dune
; documentation for more details.
